# zero-to-AI

./: README.md  backup.xml
python/: aisearch-libraries-recreate.sh  aisearch-setup.sh  async-poem.py  code-reformat.ps1  code-reformat.sh  github_actions_dotenv  jupyter-demo.ipynb  jupyter-start.ps1  jupyter-start.sh  lint.ps1  lint.sh  m26-mcp-client.py  m26-mcp-deploy2cursor.sh  m26-mcp-server.ps1  m26-mcp-server.py  m26-mcp-server.sh  main-aoai.py  main-cli-sample.py  main-cosmos-nosql.py  main-docintel.py  main-rdf-graph.py  main-search.py  main-storage.py  main-streamlit.py  main-wrangling.py  pyproject.toml  pytest.ini  requirements.txt  tests.ps1  tests.sh  venv.ps1  venv.sh
python/data/cosmosdb/: Authlib.json  Faker.json  GitPython.json  Jinja2.json  Mako.json  Markdown.json  MarkupSafe.json  PyJWT.json  PyYAML.json  Pygments.json  SQLAlchemy-Utils.json  SQLAlchemy.json  Send2Trash.json  agent-framework-core.json  agent-framework.json  aiofiles.json  aiohappyeyeballs.json  aiohttp.json  aiosignal.json  alembic.json  altair.json  annotated-doc.json  annotated-types.json  anyio.json  appnope.json  argon2-cffi-bindings.json  argon2-cffi.json  arrow.json  asgiref.json  astroid.json  asttokens.json  av.json  (+256 more)
python/jupyter/: hello-jupyter.ipynb  session.ipynb
python/rdf/: graph.json-ld  graph.nt  graph.owl  graph.turtle  graph.xml
python/src/: __init__.py
python/tests/: helpers.py  test_bytes.py  test_cosmos.py  test_counter.py  test_doc_filter.py  test_env.py  test_fs.py  test_pyproject_parser.py  test_system.py  test_template.py  test_tz.py  test_uvparser.py
(+73 files in other folders)
