[project]
name = "zero-to-AI"
version = "0.1.0"
dependencies = [
  "agent-framework",
  "aiohttp>=3.11.18",
  "azure-ai-documentintelligence==1.0.2",
  "azure-ai-projects",
  "azure-core==1.36.0",
  "azure-cosmos>=4.9.0",
  "azure-identity",
  "azure-mgmt-cognitiveservices",
  "azure-search-documents==11.5.2",
  "azure-storage-blob",
  "beautifulsoup4",
  "docopt",
  "duckdb>=1.4.3",
  "Faker",
  "geopy",
  "h11>=0.14.0",
  "httpx",
  "Jinja2>= 3.1.4",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.0",
  "m26>=0.3.2",
  "openai>=1.96.0",
  "pandas>=2.3.0", 
  "psutil",
  "pydantic-core>=2.41.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.1.1",
  "pytest>= 8.3.5",
  "python-dotenv>=1.1.1",
  "pytz",
  "six==1.17.0",
  "streamlit>=1.52.2",
  "tenacity>=9.1.2",
  "tiktoken>=0.12.0",
  "watchdog"
]



requires-python = ">=3.13"
authors = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
maintainers = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
description = "The 'zero-to-AI' series of lessons at 3Cloud/Cognizant"
readme = "readme.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["python", "AI", "3Cloud", "internal", "training"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/cjoakim/zero-to-AI/"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E722"]

[tool.uv.workspace]
members = [
    "tmp/my-project",
]
